update challenge with shared dashboard creds

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "NYLAS_ACCESS_TOKEN": "replace-me",
-  "NYLAS_APP_ID": "replace-me",
-  "NYLAS_APP_SECRET": "replace-me"
+  "NYLAS_CLIENT_ID": "replace-me",
+  "NYLAS_CLIENT_SECRET": "replace-me"
 }
