Update requirements.txt to the latest, currently cffi was failing, with the new-updtes no errors ar thrown

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
 asn1crypto==0.24.0
 bumpversion==0.5.3
 certifi==2018.1.18
-cffi==1.11.4
+cffi==1.15.0
 chardet==3.0.4
-cryptography==2.1.4
+charset-normalizer==2.0.11
+distlib==0.3.4
+docopt==0.6.2
 enum34==1.1.6
+filelock==3.4.2
+greenlet==1.1.2
 idna==2.6
 ipaddress==1.0.19
-ndg-httpsclient==0.4.4
-nylas==3.0.0
+nylas==5.5.1
+pipenv==2022.1.8
+pipreqs==0.4.11
+platformdirs==2.5.0
 pyasn1==0.4.2
 pycparser==2.18
-pyOpenSSL==17.5.0
+python-dotenv==0.19.2
 requests==2.18.4
 six==1.11.0
+SQLAlchemy==1.4.31
 urllib3==1.22
 URLObject==2.4.3
+virtualenv==20.13.1
+virtualenv-clone==0.5.7
+yarg==0.1.9
