--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ bumpversion==0.5.3
 certifi==2018.1.18
 cffi==1.15.0
 chardet==3.0.4
-charset-normalizer==2.0.11
+charset-normalizer>=2.0.11
 distlib==0.3.4
 docopt==0.6.2
-enum34==1.1.6
+enum34>=1.1.6
 filelock==3.4.2
 greenlet==1.1.2
 idna==2.6
 ipaddress==1.0.19
-nylas==5.5.1
+nylas==5.8.0
 pipenv==2022.1.8
 pipreqs==0.4.11
 platformdirs==2.5.0
